# evergreen-rs

./: Cargo.toml  README.md
conf/: opensrf.yml  opensrf_client.yml
examples/: basic-requests.rs  editor.rs  idldb.rs  misc.rs
src/: auth.rs  db.rs  editor.rs  error.rs  event.rs  idl.rs  idldb.rs  init.rs  lib.rs  main.rs  norm.rs
