[package]
name = "evergreen"
version = "0.1.0"
authors = ["Bill Erickson <berickxx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opensrf = { git = "https://github.com/berick/opensrf-rs", version = "0.1.0" }
marcutil = { git = "https://github.com/berick/marcutil-rs", version = "0.1.0" }
roxmltree = "0.14.1"
chrono = "0.4.19"
yaml-rust = "0.4.5"
log = "0.4.14"
log4rs = "1.0.0"
json = "0.12.4"
postgres = { version = "^0.19.4" }
getopts = "0.2.21"
threadpool = "1.8.1"

# Sometimes this is just simpler than log4rs
env_logger = "~0.9"

[[example]]
name = "basic-requests"
